--- a/projects/aas-lib/src/lib/aas-tree/show-image-form/show-image-form.component.html
+++ b/projects/aas-lib/src/lib/aas-tree/show-image-form/show-image-form.component.html
@@ -14,7 +14,7 @@
     <button type="button" class="btn-close" (click)="close()"></button>
 </div>
 <div class="modal-body">
-    <fhg-img classname="img-fluid" [src]="image" [alt]="name" />
+    <fhg-img classname="img-fluid" [src]="image" [alt]="name" [width]="600" [height]="400"/>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-primary" (click)="close()" translate>CMD_CLOSE</button>
