--- a/projects/aas-portal/src/app/start/favorites-form/favorites-form.component.css
+++ b/projects/aas-portal/src/app/start/favorites-form/favorites-form.component.css
@@ -5,3 +5,8 @@
  * zur Foerderung der angewandten Forschung e.V.
  *
  *****************************************************************************/
+
+ .no-border {
+    border: 0;
+    box-shadow: none;
+}
